--- a/css/style.css
+++ b/css/style.css
@@ -60,7 +60,7 @@ textarea {
 }
 
 .fixed {
-  position: fixed;
+  position: sticky;
   width: 100%;
 }
 
@@ -77,18 +77,63 @@ textarea {
   color: rgb(31, 45, 90);
 }
 
-.contact-info {
+.lock-scroll {
+  overflow: hidden;
+}
+
+.showup {
+  display: flex;
+  left: 0%;
+}
+
+.header {
+  position: relative;
+  height: 100vh;
+  width: 100%;
+  background-color: rgb(239, 241, 250);
+  overflow: hidden;
+}
+.header__nav-mobile {
+  display: flex;
+  position: absolute;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 100vh;
+  background-color: rgb(239, 241, 250);
+  opacity: 0;
+  transform: translateX(-100%);
+  transition: opacity ease-in-out 1s;
+  overflow: hidden;
+}
+.header__nav-mobile--active {
+  transition: opacity ease-in-out 1s;
+  transform: translateX(0);
+  opacity: 1;
+}
+.header__nav-desktop {
+  display: none;
+}
+.header__nav-item {
+  padding: 0.5em;
+  margin: 0.5em 0;
+  font-size: 1.6rem;
+  color: rgb(31, 45, 90);
+  text-transform: uppercase;
+  letter-spacing: 0.1em;
+}
+.header__info-box {
   width: 100%;
 }
-.contact-info .info-bar {
+.header__info-bar {
   display: flex;
   justify-content: space-evenly;
   width: 100%;
   padding: 10px;
   background-color: rgb(147, 157, 187);
 }
-.contact-info .info-bar span,
-.contact-info .info-bar a {
+.header__info-phone, .header__info-email {
   font-size: 12px;
   text-transform: uppercase;
   text-decoration: none;
@@ -96,35 +141,46 @@ textarea {
   color: rgb(31, 45, 90);
   font-weight: 600;
 }
-
-.nav-bar {
-  width: 100%;
-  height: auto;
-}
-.nav-bar .nav-container {
+.header__nav-box {
   display: flex;
   justify-content: space-between;
   align-items: center;
+  width: 100%;
+  background-color: rgb(239, 241, 250);
   overflow: hidden;
 }
-.nav-bar .nav-container a .logo {
+.header__nav-logo {
   max-width: 150px;
-  margin: 10px 10px 10px 50px;
+  margin: 10px 10px 10px 15px;
   padding: 10px;
 }
+.header__offer-box {
+  display: grid;
+  height: auto;
+  width: 100%;
+  padding: 2em;
+}
+.header__single-offer {
+  width: 100px;
+  height: 100px;
+  margin: 1em;
+  background-color: rgb(181, 53, 53);
+}
 
-.nav-items {
+.nav-desktop {
   display: none;
 }
 
-.header-container {
+.nav-mobile {
+  position: absolute;
   width: 100%;
   height: 100vh;
+  background-color: aqua;
 }
 
 .contact-section {
   display: block;
-  padding: 25px 0;
+  padding: 35px 0;
   background-color: rgb(239, 241, 250);
 }
 .contact-section .contact .contact-container {
