--- a/scss/style.scss
+++ b/scss/style.scss
@@ -54,7 +54,7 @@ textarea {
 }
 
 .fixed {
-	position: fixed;
+	position: sticky;
 	width: 100%;
 }
 
@@ -71,71 +71,126 @@ textarea {
 	color: colors.$main-font-color;
 }
 
-// // ***TOP INFO BAR***
+.lock-scroll {
+	overflow: hidden;
+}
 
-.contact-info {
+.showup {
+	display: flex;
+	left: 0%;
+}
+
+.header {
+	position: relative;
+	height: 100vh;
 	width: 100%;
+	background-color: colors.$main-background-color;
+	overflow: hidden;
 
-	.info-bar {
+	&__nav-mobile {
+		display: flex;
+		position: absolute;
+		flex-direction: column;
+		justify-content: center;
+		align-items: center;
+		width: 100%;
+		height: 100vh;
+		background-color: colors.$main-background-color;
+		opacity: 0;
+		transform: translateX(-100%);
+		transition: opacity ease-in-out 1s;
+		overflow: hidden;
+
+		&--active {
+			transition: opacity ease-in-out 1s;
+			transform: translateX(0);
+			opacity: 1;
+		}
+	}
+
+	&__nav-desktop {
+		display: none;
+	}
+
+	&__nav-item {
+		padding: 0.5em;
+		margin: 0.5em 0;
+		font-size: 1.6rem;
+		color: colors.$main-font-color;
+		text-transform: uppercase;
+		letter-spacing: 0.1em;
+	}
+
+	&__info-box {
+		width: 100%;
+	}
+
+	&__info-bar {
 		display: flex;
 		justify-content: space-evenly;
 		width: 100%;
 		padding: 10px;
 		background-color: colors.$secondary-background-color;
-
-		span,
-		a {
-			font-size: 12px;
-			text-transform: uppercase;
-			text-decoration: none;
-			padding: 5px 0;
-			color: colors.$main-font-color;
-			font-weight: 600;
-		}
 	}
-}
 
-// // *** HEADER CONTAINER AND LOGO ***
+	&__info-phone,
+	&__info-email {
+		font-size: 12px;
+		text-transform: uppercase;
+		text-decoration: none;
+		padding: 5px 0;
+		color: colors.$main-font-color;
+		font-weight: 600;
+	}
 
-.nav-bar {
-	width: 100%;
-	height: auto;
-
-	.nav-container {
+	&__nav-box {
 		display: flex;
 		justify-content: space-between;
 		align-items: center;
-		// background-color: colors.$main-background-color;
+		width: 100%;
+		background-color: colors.$main-background-color;
 		overflow: hidden;
+	}
 
-		a {
-			.logo {
-				max-width: 150px;
-				margin: 10px 10px 10px 50px;
-				padding: 10px;
-			}
-		}
+	&__nav-logo {
+		max-width: 150px;
+		margin: 10px 10px 10px 15px;
+		padding: 10px;
+	}
+
+	&__offer-box {
+		display: grid;
+		height: auto;
+		width: 100%;
+		padding: 2em;
+	}
+
+	&__single-offer {
+		width: 100px;
+		height: 100px;
+		margin: 1em;
+		background-color: rgb(181, 53, 53);
 	}
 }
 
 // // *** MOBILE HAMBURGER MENU***
 
-.nav-items {
+.nav-desktop {
 	display: none;
 }
 
-// // *** HERO BANNER ***
-
-.header-container {
+.nav-mobile {
+	position: absolute;
 	width: 100%;
 	height: 100vh;
+	background-color: aqua;
 }
 
 // *** CONTACT FORM ***
 
 .contact-section {
 	display: block;
-	padding: 25px 0;
+	padding: 35px 0;
 	background-color: colors.$main-background-color;
 
 	.contact {
