--- a/scss/_colors.scss
+++ b/scss/_colors.scss
@@ -3,5 +3,5 @@ $main-background-color: rgb(239, 241, 250);
 $secondary-background-color: rgb(147, 157, 187);
 
 // ***FONTS COLORS***
-$main-font-color: rgb(31, 45, 90);
+$main-font-color: #1f2d5a;
 $h1-color: rgb(255, 255, 255);
