added new icons to mobile menu

--- a/css/style.css
+++ b/css/style.css
@@ -140,7 +140,7 @@ textarea {
   padding: 0.5em 1em 0.5em 0;
   height: 100%;
   width: 100%;
-  font-size: 1.1em;
+  font-size: 1.1rem;
   color: #1f2d5a;
   text-transform: capitalize;
 }
