--- a/css/style.css
+++ b/css/style.css
@@ -15,6 +15,7 @@ body {
   font-family: "Crimson Text", sans-serif;
   font-size: 15px;
   color: #1f2d5a;
+  background-color: rgb(239, 241, 250);
 }
 
 ::-moz-placeholder {
@@ -83,7 +84,6 @@ textarea {
 
 .header {
   position: relative;
-  background-color: rgb(239, 241, 250);
 }
 .header__box {
   position: fixed;
@@ -93,7 +93,9 @@ textarea {
   margin: 0 auto;
   width: 100%;
   max-width: 1400px;
+  top: 0;
   background-color: rgb(239, 241, 250);
+  z-index: 10;
 }
 .header__logo {
   max-width: 150px;
@@ -114,10 +116,11 @@ textarea {
   width: 100%;
   top: 0;
   padding-top: 8em;
+  background-color: rgb(239, 241, 250);
   transform: translate(-110%);
   opacity: 0;
-  background-color: rgb(239, 241, 250);
   transition: opacity ease-in-out 1s;
+  z-index: 10;
 }
 .nav-mobile--active {
   transform: translate(0);
@@ -145,10 +148,105 @@ textarea {
   text-transform: capitalize;
 }
 
+.secondary-desktop-nav {
+  display: none;
+}
+
+.slider {
+  position: relative;
+  width: 100%;
+  max-width: 100vw;
+  height: 80vh;
+  overflow: hidden;
+}
+.slider__slide-box {
+  position: absolute;
+  display: flex;
+  flex-direction: column;
+  flex: 0 0 100%;
+  height: 100%;
+  width: 100%;
+  padding-top: 4em;
+  top: 0;
+  left: 0;
+  transition: transform 1s ease-in-out;
+  transform: translateX(100%);
+}
+.slider__slide-box--active {
+  transform: translateX(0);
+}
+.slider__text-box {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: flex-start;
+  flex: 3;
+  box-sizing: border-box;
+  width: 100%;
+  padding: 2em;
+  order: 2;
+  color: rgb(255, 255, 255);
+}
+.slider__text-box--slide1 {
+  background-color: #ba93be;
+}
+.slider__text-box--slide2 {
+  background-color: #0767b2;
+}
+.slider__text-box--slide3 {
+  background-color: #d89069;
+}
+.slider__description {
+  padding: 0.5em 0;
+  font-size: 1.1rem;
+}
+.slider__btn {
+  display: inline-block;
+  margin: 20px 0;
+  padding: 10px 20px;
+  text-align: center;
+  background-color: transparent;
+  border: 2px solid rgb(255, 255, 255);
+  border-radius: 4px;
+  text-decoration: none;
+  font-size: 1.1rem;
+  font-weight: 600;
+  color: rgb(255, 255, 255);
+}
+.slider__btn:hoover {
+  background-color: rgb(255, 255, 255);
+  color: black;
+  transition: 0.5s;
+}
+.slider__img {
+  -o-object-fit: cover;
+     object-fit: cover;
+  flex: 7;
+  width: 100%;
+  height: auto;
+  box-sizing: border-box;
+}
+
+.arrow {
+  position: absolute;
+  top: 60%;
+  font-size: 24px;
+  color: #fff;
+  background: none;
+  border: none;
+  cursor: pointer;
+  outline: none;
+}
+.arrow--prevBtn {
+  left: 10px;
+}
+.arrow--nextBtn {
+  right: 10px;
+}
+
 .contact-section {
   display: block;
   padding: 35px 0;
-  background-color: rgb(239, 241, 250);
 }
 .contact-section .contact .contact-container {
   margin: 0 auto;
@@ -248,7 +346,6 @@ textarea {
 .footer-container {
   width: 100%;
   height: 100%;
-  background-color: rgb(239, 241, 250);
 }
 .footer-container .legal-rules {
   padding: 20px 30px;
@@ -281,16 +378,27 @@ textarea {
   .header__nav-mobile {
     display: none;
   }
-  .header__info-box {
-    display: none;
+  .header__nav-desktop-box {
+    margin-right: 8em;
   }
   .header__nav-desktop {
     display: flex;
+    justify-content: end;
+    align-items: start;
+  }
+  .header__nav-item {
+    padding: 1em 2em;
+    font-size: 1.25rem;
+    font-weight: 600;
+    color: #1f2d5a;
+    text-transform: capitalize;
+  }
+  .secondary-desktop-nav:hover {
+    display: flex;
+    height: 75vh;
+    width: 100%;
   }
   .hamburger {
-    display: none;
-  }
-  .contact-info {
     display: none;
   }
   .contact-wrapper {
