--- a/css/style.css
+++ b/css/style.css
@@ -156,7 +156,7 @@ textarea {
   position: relative;
   width: 100%;
   max-width: 100vw;
-  height: 80vh;
+  height: 85vh;
   overflow: hidden;
 }
 .slider__slide-box {
@@ -166,7 +166,7 @@ textarea {
   flex: 0 0 100%;
   height: 100%;
   width: 100%;
-  padding-top: 4em;
+  padding-top: 3.5em;
   top: 0;
   left: 0;
   transition: transform 1s ease-in-out;
@@ -183,35 +183,43 @@ textarea {
   flex: 3;
   box-sizing: border-box;
   width: 100%;
-  padding: 2em;
+  padding: 1.25em 2.25em;
   order: 2;
-  color: rgb(255, 255, 255);
+  color: #1f2d5a;
 }
 .slider__text-box--slide1 {
-  background-color: #ba93be;
+  background-color: #ffffff;
 }
 .slider__text-box--slide2 {
-  background-color: #0767b2;
+  background-color: #ffffff;
 }
 .slider__text-box--slide3 {
-  background-color: #d89069;
+  background-color: #ffffff;
+}
+.slider__text-box--slide4 {
+  background-color: #ffffff;
+}
+.slider__text-box--slide5 {
+  background-color: #ffffff;
+}
+.slider__headers {
+  font-size: 1.1rem;
 }
 .slider__description {
   padding: 0.5em 0;
-  font-size: 1.1rem;
+  font-size: 0.95rem;
 }
 .slider__btn {
-  display: inline-block;
-  margin: 20px 0;
-  padding: 10px 20px;
+  margin: 0.5em 0;
+  padding: 0.5em 1.2em;
   text-align: center;
   background-color: transparent;
-  border: 2px solid rgb(255, 255, 255);
+  border: 2px solid #1f2d5a;
   border-radius: 4px;
   text-decoration: none;
   font-size: 1.1rem;
   font-weight: 600;
-  color: rgb(255, 255, 255);
+  color: #1f2d5a;
 }
 .slider__btn:hoover {
   background-color: rgb(255, 255, 255);
@@ -229,8 +237,8 @@ textarea {
 
 .arrow {
   position: absolute;
-  top: 60%;
-  font-size: 24px;
+  top: 50%;
+  font-size: 1.6rem;
   color: #fff;
   background: none;
   border: none;
@@ -238,10 +246,10 @@ textarea {
   outline: none;
 }
 .arrow--prevBtn {
-  left: 10px;
+  left: 0.8em;
 }
 .arrow--nextBtn {
-  right: 10px;
+  right: 0.8em;
 }
 
 .contact-section {
