--- a/scss/style.scss
+++ b/scss/style.scss
@@ -158,7 +158,7 @@ textarea {
 	position: relative;
 	width: 100%;
 	max-width: 100vw;
-	height: 80vh;
+	height: 85vh;
 	overflow: hidden;
 
 	&__slide-box {
@@ -168,7 +168,7 @@ textarea {
 		flex: 0 0 100%;
 		height: 100%;
 		width: 100%;
-		padding-top: 4em;
+		padding-top: 3.5em;
 		top: 0;
 		left: 0;
 		transition: transform 1s ease-in-out;
@@ -187,40 +187,50 @@ textarea {
 		flex: 3;
 		box-sizing: border-box;
 		width: 100%;
-		padding: 2em;
+		padding: 1.25em 2.25em;
 		order: 2;
-		color: colors.$h1-color;
+		color: colors.$main-font-color;
 
 		&--slide1 {
-			background-color: #ba93be;
+			background-color: #ffffff;
 		}
 
 		&--slide2 {
-			background-color: #0767b2;
+			background-color: #ffffff;
 		}
 
 		&--slide3 {
-			background-color: #d89069;
+			background-color: #ffffff;
 		}
+		&--slide4 {
+			background-color: #ffffff;
+		}
+		&--slide5 {
+			background-color: #ffffff;
+		}
+	}
+
+	&__headers {
+		font-size: 1.1rem;
 	}
 
 	&__description {
 		padding: 0.5em 0;
-		font-size: 1.1rem;
+		font-size: 0.95rem;
 	}
 
 	&__btn {
-		display: inline-block;
-		margin: 20px 0;
-		padding: 10px 20px;
+		// display: inline-block;
+		margin: 0.5em 0;
+		padding: 0.5em 1.2em;
 		text-align: center;
 		background-color: transparent;
-		border: 2px solid colors.$h1-color;
+		border: 2px solid colors.$main-font-color;
 		border-radius: 4px;
 		text-decoration: none;
 		font-size: 1.1rem;
 		font-weight: 600;
-		color: colors.$h1-color;
+		color: colors.$main-font-color;
 
 		&:hoover {
 			background-color: colors.$h1-color;
@@ -240,8 +250,8 @@ textarea {
 
 .arrow {
 	position: absolute;
-	top: 60%;
-	font-size: 24px;
+	top: 50%;
+	font-size: 1.6rem;
 	color: #fff;
 	background: none;
 	border: none;
@@ -249,11 +259,11 @@ textarea {
 	outline: none;
 
 	&--prevBtn {
-		left: 10px;
+		left: 0.8em;
 	}
 
 	&--nextBtn {
-		right: 10px;
+		right: 0.8em;
 	}
 }
 
