--- a/css/style.css
+++ b/css/style.css
@@ -157,20 +157,19 @@ textarea {
   width: 100%;
   max-width: 100vw;
   height: 85vh;
+  margin-bottom: 3em;
   overflow: hidden;
 }
 .slider__slide-box {
   position: absolute;
   display: flex;
   flex-direction: column;
-  flex: 0 0 100%;
   height: 100%;
   width: 100%;
-  padding-top: 3.5em;
   top: 0;
   left: 0;
-  transition: transform 1s ease-in-out;
   transform: translateX(100%);
+  transition: transform 1s ease-in-out, opacity 1s ease-in-out;
 }
 .slider__slide-box--active {
   transform: translateX(0);
@@ -414,14 +413,23 @@ textarea {
   }
   .slider__slide-box {
     flex-direction: row;
-    padding-top: 4.5em;
+    padding: 5em 2em 0 2em;
   }
   .slider__text-box {
     width: 30%;
     padding: 4em;
   }
   .slider__img {
+    height: 100%;
     width: 70px;
+  }
+  .arrow {
+    top: 80%;
+    margin: 0 2.2em;
+    padding: 1em;
+    color: #1f2d5a;
+    border: 2px solid;
+    border-radius: 50px;
   }
   .contact-wrapper {
     display: flex;
