--- a/scss/style.scss
+++ b/scss/style.scss
@@ -159,21 +159,21 @@ textarea {
 	width: 100%;
 	max-width: 100vw;
 	height: 85vh;
+	margin-bottom: 3em;
 	overflow: hidden;
 
 	&__slide-box {
 		position: absolute;
 		display: flex;
 		flex-direction: column;
-		flex: 0 0 100%;
+		// flex: 0 0 100%;
 		height: 100%;
 		width: 100%;
-		padding-top: 3.5em;
 		top: 0;
 		left: 0;
-		transition: transform 1s ease-in-out;
 		transform: translateX(100%);
-
+		transition: transform 1s ease-in-out, opacity 1s ease-in-out;
+		
 		&--active {
 			transform: translateX(0);
 		}
@@ -470,15 +470,25 @@ textarea {
 		height: 700px;
 		&__slide-box {
 			flex-direction: row;
-			padding-top: 4.5em;
+			padding: 5em 2em 0 2em;
 		}
 		&__text-box {
 			width: 30%;
 			padding: 4em;
 		}
 		&__img {
+			height: 100%;
 			width: 70px;
 		}
+	}
+
+	.arrow {
+		top: 80%;
+		margin: 0 2.2em;
+		padding: 1em;
+		color: colors.$main-font-color;
+		border: 2px solid;
+        border-radius: 50px;
 	}
 
 	// *** CONTACT FORM ***
