--- a/css/style.css
+++ b/css/style.css
@@ -169,7 +169,7 @@ textarea {
   top: 0;
   left: 0;
   transform: translateX(100%);
-  transition: transform 1s ease-in-out, opacity 1s ease-in-out;
+  transition: transform 1s ease-in-out;
 }
 .slider__slide-box--active {
   transform: translateX(0);
@@ -249,6 +249,40 @@ textarea {
 }
 .arrow--nextBtn {
   right: 0.8em;
+}
+
+.benefits {
+  padding: 0 1em 2em;
+}
+.benefits__box {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  overflow: hidden;
+}
+.benefits__title {
+  margin: 0 15px 15px;
+  padding: 25px 15px;
+  font-size: 1.4rem;
+  color: #1f2d5a;
+  border-left: 3px solid #1f2d5a;
+}
+.benefits__icons-box {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  grid-template-rows: repeat(2, 1fr);
+}
+.benefits__icon-box {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  padding: 2em;
+}
+.benefits__text {
+  text-align: center;
+  font-size: 0.95rem;
+  font-weight: 600;
 }
 
 .contact-section {
@@ -430,6 +464,10 @@ textarea {
     color: #1f2d5a;
     border: 2px solid;
     border-radius: 50px;
+  }
+  .benefits__icons-box {
+    grid-template-columns: repeat(4, 1fr);
+    grid-template-rows: repeat(1, 1fr);
   }
   .contact-wrapper {
     display: flex;
