--- a/scss/style.scss
+++ b/scss/style.scss
@@ -166,14 +166,13 @@ textarea {
 		position: absolute;
 		display: flex;
 		flex-direction: column;
-		// flex: 0 0 100%;
 		height: 100%;
 		width: 100%;
 		top: 0;
 		left: 0;
 		transform: translateX(100%);
-		transition: transform 1s ease-in-out, opacity 1s ease-in-out;
-		
+		transition: transform 1s ease-in-out;
+
 		&--active {
 			transform: translateX(0);
 		}
@@ -265,6 +264,47 @@ textarea {
 
 	&--nextBtn {
 		right: 0.8em;
+	}
+}
+
+// *** BENEFITS SECTION ***
+
+.benefits {
+	padding: 0 1em 2em;
+
+	&__box {
+		display: flex;
+		flex-direction: column;
+		justify-content: flex-start;
+		overflow: hidden;
+	}
+
+	&__title {
+		margin: 0 15px 15px;
+		padding: 25px 15px;
+		font-size: 1.4rem;
+		color: colors.$main-font-color;
+		border-left: 3px solid colors.$main-font-color;
+	}
+
+	&__icons-box {
+		display: grid;
+		grid-template-columns: repeat(2, 1fr);
+		grid-template-rows: repeat(2, 1fr);
+	}
+
+	&__icon-box {
+		display: flex;
+		flex-direction: column;
+		justify-content: center;
+		align-items: center;
+		padding: 2em;
+	}
+
+	&__text {
+		text-align: center;
+		font-size: 0.95rem;
+		font-weight: 600;
 	}
 }
 
@@ -488,7 +528,14 @@ textarea {
 		padding: 1em;
 		color: colors.$main-font-color;
 		border: 2px solid;
-        border-radius: 50px;
+		border-radius: 50px;
+	}
+
+	.benefits {
+		&__icons-box {
+			grid-template-columns: repeat(4, 1fr);
+			grid-template-rows: repeat(1, 1fr);
+		}
 	}
 
 	// *** CONTACT FORM ***
