--- a/scss/style.scss
+++ b/scss/style.scss
@@ -159,7 +159,7 @@ textarea {
 	width: 100%;
 	max-width: 100vw;
 	height: 85vh;
-	margin-bottom: 3em;
+	padding-bottom: 3em;
 	overflow: hidden;
 
 	&__slide-box {
@@ -270,7 +270,8 @@ textarea {
 // *** BENEFITS SECTION ***
 
 .benefits {
-	padding: 0 1em 2em;
+	padding: 3em 1em 2em;
+	background-color: white;
 
 	&__box {
 		display: flex;
