--- a/css/style.css
+++ b/css/style.css
@@ -15,7 +15,6 @@ body {
   font-family: "Crimson Text", sans-serif;
   font-size: 15px;
   color: #1f2d5a;
-  background-color: rgb(239, 241, 250);
 }
 
 ::-moz-placeholder {
@@ -84,6 +83,9 @@ textarea {
 
 .header {
   position: relative;
+  margin: 0 auto;
+  width: 100%;
+  max-width: 1400px;
 }
 .header__box {
   position: fixed;
@@ -448,7 +450,6 @@ textarea {
   }
   .slider__slide-box {
     flex-direction: row;
-    padding: 5em 2em 0 2em;
   }
   .slider__text-box {
     width: 30%;
