--- a/css/style.css
+++ b/css/style.css
@@ -58,14 +58,6 @@ textarea {
   resize: vertical;
 }
 
-.section-title {
-  margin: 0 15px;
-  padding: 25px 15px;
-  font-size: 22px;
-  color: #1f2d5a;
-  border-left: 3px solid #1f2d5a;
-}
-
 .privacy-policy {
   margin: 0 15px;
   color: #1f2d5a;
@@ -75,27 +67,46 @@ textarea {
   overflow: hidden;
 }
 
+.section {
+  display: block;
+  background-color: rgb(239, 241, 250);
+}
+
 .container {
   margin: 0 auto;
   width: 100%;
   max-width: 1400px;
 }
 
+.section-title {
+  margin: 0 15px;
+  padding: 25px 15px;
+  font-size: 22px;
+  color: #1f2d5a;
+  border-left: 3px solid #1f2d5a;
+}
+
+.headers-titles {
+  margin: 0 15px 15px;
+  padding: 25px 15px;
+  font-size: 1.4rem;
+  color: #1f2d5a;
+  border-left: 3px solid #1f2d5a;
+}
+
+.main-header-box {
+  height: 100%;
+}
+
 .header {
   position: relative;
-  margin: 0 auto;
-  width: 100%;
-  max-width: 1400px;
 }
 .header__box {
   position: fixed;
   display: flex;
   justify-content: space-between;
   align-items: center;
-  margin: 0 auto;
   width: 100%;
-  max-width: 1400px;
-  top: 0;
   background-color: rgb(239, 241, 250);
   z-index: 10;
 }
@@ -159,7 +170,7 @@ textarea {
   width: 100%;
   max-width: 100vw;
   height: 85vh;
-  padding-bottom: 3em;
+  margin-bottom: 3em;
   overflow: hidden;
 }
 .slider__slide-box {
@@ -253,6 +264,54 @@ textarea {
   right: 0.8em;
 }
 
+.brand-slider {
+  position: relative;
+  width: 100%;
+  padding: 3em 1em 2em;
+  overflow: hidden;
+}
+.brand-slider__description {
+  padding: 2em 2em 0;
+  text-align: left;
+}
+.brand-slider__box {
+  display: flex;
+  margin: 2em 0;
+  transition: transform 3.5s linear;
+}
+.brand-slider__brand {
+  display: flex;
+  justify-content: center;
+  margin: 0 2.5em;
+  flex: 0 0 calc(33.333% - 10px);
+}
+.brand-slider__logo {
+  max-width: 250px;
+  height: 120px;
+}
+.brand-slider__btn-box {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.brand-slider__btn {
+  margin: 0.5em 0;
+  padding: 0.5em 1.2em;
+  text-align: center;
+  background-color: transparent;
+  border: 2px solid #1f2d5a;
+  border-radius: 4px;
+  text-decoration: none;
+  font-size: 1.1rem;
+  font-weight: 600;
+  color: #1f2d5a;
+}
+.brand-slider__btn:hoover {
+  background-color: #1f2d5a;
+  color: rgb(255, 255, 255);
+  transition: 0.5s;
+}
+
 .benefits {
   padding: 3em 1em 2em;
   background-color: white;
@@ -262,13 +321,6 @@ textarea {
   flex-direction: column;
   justify-content: flex-start;
   overflow: hidden;
-}
-.benefits__title {
-  margin: 0 15px 15px;
-  padding: 25px 15px;
-  font-size: 1.4rem;
-  color: #1f2d5a;
-  border-left: 3px solid #1f2d5a;
 }
 .benefits__icons-box {
   display: grid;
@@ -466,6 +518,9 @@ textarea {
     color: #1f2d5a;
     border: 2px solid;
     border-radius: 50px;
+  }
+  .brand-slider__brand {
+    margin: 0 0;
   }
   .benefits__icons-box {
     grid-template-columns: repeat(4, 1fr);
