--- a/scss/style.scss
+++ b/scss/style.scss
@@ -52,14 +52,6 @@ textarea {
 	resize: vertical;
 }
 
-.section-title {
-	margin: 0 15px;
-	padding: 25px 15px;
-	font-size: 22px;
-	color: colors.$main-font-color;
-	border-left: 3px solid colors.$main-font-color;
-}
-
 .privacy-policy {
 	margin: 0 15px;
 	color: colors.$main-font-color;
@@ -69,27 +61,46 @@ textarea {
 	overflow: hidden;
 }
 
+.section {
+	display: block;
+	background-color: colors.$main-background-color;
+}
+
 .container {
 	margin: 0 auto;
 	width: 100%;
 	max-width: 1400px;
 }
 
+.section-title {
+	margin: 0 15px;
+	padding: 25px 15px;
+	font-size: 22px;
+	color: colors.$main-font-color;
+	border-left: 3px solid colors.$main-font-color;
+}
+
+.headers-titles {
+	margin: 0 15px 15px;
+	padding: 25px 15px;
+	font-size: 1.4rem;
+	color: colors.$main-font-color;
+	border-left: 3px solid colors.$main-font-color;
+}
+
+.main-header-box {
+	height: 100%;
+}
+
 .header {
 	position: relative;
-	margin: 0 auto;
-	width: 100%;
-	max-width: 1400px;
 
 	&__box {
 		position: fixed;
 		display: flex;
 		justify-content: space-between;
 		align-items: center;
-		margin: 0 auto;
 		width: 100%;
-		max-width: 1400px;
-		top: 0;
 		background-color: colors.$main-background-color;
 		z-index: 10;
 	}
@@ -160,7 +171,7 @@ textarea {
 	width: 100%;
 	max-width: 100vw;
 	height: 85vh;
-	padding-bottom: 3em;
+	margin-bottom: 3em;
 	overflow: hidden;
 
 	&__slide-box {
@@ -268,6 +279,63 @@ textarea {
 	}
 }
 
+// *** BRAND SLIDER SECTION ***
+
+.brand-slider {
+	position: relative;
+	width: 100%;
+	padding: 3em 1em 2em;
+	overflow: hidden;
+
+	&__description {
+		padding: 2em 2em 0;
+		text-align: left;
+	}
+
+	&__box {
+		display: flex;
+		margin: 2em 0;
+		transition: transform 3.5s linear;
+	}
+
+	&__brand {
+		display: flex;
+		justify-content: center;
+		margin: 0 2.5em;
+		flex: 0 0 calc(33.333% - 10px);
+	}
+
+	&__logo {
+		max-width: 250px;
+		height: 120px;
+	}
+
+	&__btn-box {
+		display: flex;
+		justify-content: center;
+		align-items: center;
+	}
+
+	&__btn {
+		margin: 0.5em 0;
+		padding: 0.5em 1.2em;
+		text-align: center;
+		background-color: transparent;
+		border: 2px solid colors.$main-font-color;
+		border-radius: 4px;
+		text-decoration: none;
+		font-size: 1.1rem;
+		font-weight: 600;
+		color: colors.$main-font-color;
+
+		&:hoover {
+			background-color: colors.$main-font-color;
+			color: rgb(255, 255, 255);
+			transition: 0.5s;
+		}
+	}
+}
+
 // *** BENEFITS SECTION ***
 
 .benefits {
@@ -279,14 +347,6 @@ textarea {
 		flex-direction: column;
 		justify-content: flex-start;
 		overflow: hidden;
-	}
-
-	&__title {
-		margin: 0 15px 15px;
-		padding: 25px 15px;
-		font-size: 1.4rem;
-		color: colors.$main-font-color;
-		border-left: 3px solid colors.$main-font-color;
 	}
 
 	&__icons-box {
@@ -530,6 +590,12 @@ textarea {
 		color: colors.$main-font-color;
 		border: 2px solid;
 		border-radius: 50px;
+	}
+
+	.brand-slider {
+		&__brand {
+			margin: 0 0;
+		}
 	}
 
 	.benefits {
