--- a/scss/style.scss
+++ b/scss/style.scss
@@ -279,6 +279,18 @@ textarea {
 	}
 }
 
+// *** ABOUT US SECTION ***
+
+.about {
+	width: 100%;
+	padding: 0 1em 2em;
+
+	&__description {
+		padding: 2em 2em 0;
+		text-align: left;
+	}
+}
+
 // *** BRAND SLIDER SECTION ***
 
 .brand-slider {
