--- a/scss/_colors.scss
+++ b/scss/_colors.scss
@@ -1,6 +1,6 @@
 // ***BACKGROUND COLORS***
 $main-background-color: rgb(239, 241, 250);
-$secondary-background-color: rgb(147, 157, 187);
+$secondary-background-color: #939dbb;
 
 // ***FONTS COLORS***
 $main-font-color: #1f2d5a;
