Added some adjustments

--- a/css/style.css
+++ b/css/style.css
@@ -94,10 +94,6 @@ textarea {
   border-left: 3px solid #1f2d5a;
 }
 
-.main-header-box {
-  height: 100%;
-}
-
 .header {
   position: relative;
 }
@@ -107,6 +103,8 @@ textarea {
   justify-content: space-between;
   align-items: center;
   width: 100%;
+  top: 0;
+  left: 0;
   background-color: rgb(239, 241, 250);
   z-index: 10;
 }
@@ -115,7 +113,7 @@ textarea {
   margin: 10px 10px 10px 15px;
   padding: 10px;
 }
-.header__nav-desktop {
+.header__nav-desktop-box {
   display: none;
 }
 
@@ -159,10 +157,6 @@ textarea {
   font-size: 1.1rem;
   color: #1f2d5a;
   text-transform: capitalize;
-}
-
-.secondary-desktop-nav {
-  display: none;
 }
 
 .slider {
@@ -224,7 +218,6 @@ textarea {
 .slider__btn {
   margin: 0.5em 0;
   padding: 0.5em 1.2em;
-  text-align: center;
   background-color: transparent;
   border: 2px solid #1f2d5a;
   border-radius: 4px;
@@ -232,11 +225,11 @@ textarea {
   font-size: 1.1rem;
   font-weight: 600;
   color: #1f2d5a;
+  transition: color 0.5s linear, background-color 0.5s linear;
 }
-.slider__btn:hoover {
-  background-color: rgb(255, 255, 255);
-  color: black;
-  transition: 0.5s;
+.slider__btn:hover {
+  background-color: #1f2d5a;
+  color: rgb(255, 255, 255);
 }
 .slider__img {
   -o-object-fit: cover;
@@ -256,6 +249,10 @@ textarea {
   border: none;
   cursor: pointer;
   outline: none;
+  transition: background-color 0.5s linear;
+}
+.arrow:hover {
+  background-color: rgb(239, 241, 250);
 }
 .arrow--prevBtn {
   left: 0.8em;
@@ -314,11 +311,11 @@ textarea {
   font-size: 1.1rem;
   font-weight: 600;
   color: #1f2d5a;
+  transition: color 0.5s linear, background-color 0.5s linear;
 }
-.brand-slider__btn:hoover {
+.brand-slider__btn:hover {
   background-color: #1f2d5a;
   color: rgb(255, 255, 255);
-  transition: 0.5s;
 }
 
 @keyframes slideAnimation {
@@ -406,30 +403,32 @@ textarea {
 }
 .contact-section .contact .contact-container .contact-wrapper .form-container .contact-form .contact-box .contact-input,
 .contact-section .contact .contact-container .contact-wrapper .form-container .contact-form .contact-box .contact-textarea {
-  padding: 5px;
+  padding: 0.5em 0.8em;
   background: none;
-  border: 1px solid #1f2d5a;
+  border: 2px solid #1f2d5a;
   border-radius: 4px;
   outline: none;
   color: #1f2d5a;
   font-family: "Crimson Text", sans-serif;
   font-size: 16px;
+  font-weight: 600;
 }
 .contact-section .contact .contact-container .contact-wrapper .contact-btn {
-  margin-top: 18px;
-  padding: 5px;
-  font-size: 16px;
   width: 100%;
-  color: #fff;
-  background-color: #1f2d5a;
-  border: 1px solid #1f2d5a;
-  border-radius: 8px;
-  transition: all 0.5s;
+  margin: 0.5em 0;
+  padding: 0.5em 1.2em;
+  background-color: transparent;
+  border: 2px solid #1f2d5a;
+  border-radius: 4px;
+  text-decoration: none;
+  font-size: 1.1rem;
+  font-weight: 600;
+  color: #1f2d5a;
+  transition: color 0.5s linear, background-color 0.5s linear;
 }
 .contact-section .contact .contact-container .contact-wrapper .contact-btn:hover {
-  background-color: #939dbb;
-  color: #1f2d5a;
-  border: 1px solid #1f2d5a;
+  background-color: #1f2d5a;
+  color: rgb(255, 255, 255);
 }
 .contact-section .contact .contact-container .contact-wrapper .newsletter-container {
   display: flex;
@@ -514,13 +513,18 @@ textarea {
   }
 }
 @media (min-width: 810px) {
+  .header__box {
+    justify-content: space-evenly;
+  }
   .header__nav-mobile {
     display: none;
   }
   .header__nav-desktop-box {
+    display: flex;
     margin-right: 8em;
   }
   .header__nav-desktop {
+    position: relative;
     display: flex;
     justify-content: end;
     align-items: start;
@@ -531,6 +535,13 @@ textarea {
     font-weight: 600;
     color: #1f2d5a;
     text-transform: capitalize;
+    transition: color 0.5s linear;
+  }
+  .header__nav-item:hover {
+    color: #939dbb;
+  }
+  .header__drop-down-nav-box {
+    display: none;
   }
   .secondary-desktop-nav:hover {
     display: flex;
@@ -559,6 +570,7 @@ textarea {
     margin: 0 2.2em;
     padding: 1em;
     color: #1f2d5a;
+    font-size: 1rem;
     border: 2px solid;
     border-radius: 50px;
   }
