--- a/scss/style.scss
+++ b/scss/style.scss
@@ -88,10 +88,6 @@ textarea {
 	border-left: 3px solid colors.$main-font-color;
 }
 
-.main-header-box {
-	height: 100%;
-}
-
 .header {
 	position: relative;
 
@@ -101,6 +97,8 @@ textarea {
 		justify-content: space-between;
 		align-items: center;
 		width: 100%;
+		top: 0;
+		left: 0;
 		background-color: colors.$main-background-color;
 		z-index: 10;
 	}
@@ -111,7 +109,7 @@ textarea {
 		padding: 10px;
 	}
 
-	&__nav-desktop {
+	&__nav-desktop-box {
 		display: none;
 	}
 }
@@ -160,10 +158,6 @@ textarea {
 		color: colors.$main-font-color;
 		text-transform: capitalize;
 	}
-}
-
-.secondary-desktop-nav {
-	display: none;
 }
 
 .slider {
@@ -235,7 +229,6 @@ textarea {
 	&__btn {
 		margin: 0.5em 0;
 		padding: 0.5em 1.2em;
-		text-align: center;
 		background-color: transparent;
 		border: 2px solid colors.$main-font-color;
 		border-radius: 4px;
@@ -243,11 +236,11 @@ textarea {
 		font-size: 1.1rem;
 		font-weight: 600;
 		color: colors.$main-font-color;
+		transition: color 0.5s linear, background-color 0.5s linear;
 
-		&:hoover {
-			background-color: colors.$h1-color;
-			color: black;
-			transition: 0.5s;
+		&:hover {
+			background-color: colors.$main-font-color;
+			color: colors.$h1-color;
 		}
 	}
 
@@ -269,6 +262,11 @@ textarea {
 	border: none;
 	cursor: pointer;
 	outline: none;
+	transition: background-color 0.5s linear;
+
+	&:hover {
+		background-color: colors.$main-background-color;
+	}
 
 	&--prevBtn {
 		left: 0.8em;
@@ -339,11 +337,11 @@ textarea {
 		font-size: 1.1rem;
 		font-weight: 600;
 		color: colors.$main-font-color;
+		transition: color 0.5s linear, background-color 0.5s linear;
 
-		&:hoover {
+		&:hover {
 			background-color: colors.$main-font-color;
-			color: rgb(255, 255, 255);
-			transition: 0.5s;
+			color: colors.$h1-color;
 		}
 	}
 }
@@ -450,35 +448,37 @@ textarea {
 
 							.contact-input,
 							.contact-textarea {
-								padding: 5px;
+								padding: 0.5em 0.8em;
 								background: none;
-								border: 1px solid colors.$main-font-color;
+								border: 2px solid colors.$main-font-color;
 								border-radius: 4px;
 								outline: none;
 								color: colors.$main-font-color;
 								font-family: 'Crimson Text', sans-serif;
 								font-size: 16px;
+								font-weight: 600;
 							}
 						}
 					}
 				}
 
 				.contact-btn {
-					margin-top: 18px;
-					padding: 5px;
-					font-size: 16px;
 					width: 100%;
-					color: #fff;
-					background-color: colors.$main-font-color;
-					border: 1px solid colors.$main-font-color;
-					border-radius: 8px;
-					transition: all 0.5s;
+					margin: 0.5em 0;
+					padding: 0.5em 1.2em;
+					background-color: transparent;
+					border: 2px solid colors.$main-font-color;
+					border-radius: 4px;
+					text-decoration: none;
+					font-size: 1.1rem;
+					font-weight: 600;
+					color: colors.$main-font-color;
+					transition: color 0.5s linear, background-color 0.5s linear;
 				}
 
 				.contact-btn:hover {
-					background-color: colors.$secondary-background-color;
-					color: colors.$main-font-color;
-					border: 1px solid colors.$main-font-color;
+					background-color: colors.$main-font-color;
+					color: colors.$h1-color;
 				}
 
 				.newsletter-container {
@@ -553,7 +553,6 @@ textarea {
 }
 
 @media (min-width: 350px) {
-
 	.brand-slider {
 		&__box {
 			animation: slideAnimation 30s linear infinite;
@@ -568,11 +567,9 @@ textarea {
 			transform: translateX(-780%);
 		}
 	}
-	
 }
 
 @media (min-width: 475px) {
-
 	.brand-slider {
 		&__box {
 			animation: slideAnimation 30s linear infinite;
@@ -587,20 +584,25 @@ textarea {
 			transform: translateX(-720%);
 		}
 	}
-	
 }
 
 @media (min-width: 810px) {
 	.header {
+		&__box {
+			justify-content: space-evenly;
+		}
+
 		&__nav-mobile {
 			display: none;
 		}
 
 		&__nav-desktop-box {
+			display: flex;
 			margin-right: 8em;
 		}
 
 		&__nav-desktop {
+			position: relative;
 			display: flex;
 			justify-content: end;
 			align-items: start;
@@ -612,6 +614,15 @@ textarea {
 			font-weight: 600;
 			color: colors.$main-font-color;
 			text-transform: capitalize;
+			transition: color 0.5s linear;
+
+			&:hover {
+				color: colors.$secondary-background-color;
+			}
+		}
+
+		&__drop-down-nav-box {
+			display: none;
 		}
 	}
 
@@ -647,6 +658,7 @@ textarea {
 		margin: 0 2.2em;
 		padding: 1em;
 		color: colors.$main-font-color;
+		font-size: 1rem;
 		border: 2px solid;
 		border-radius: 50px;
 	}
