--- a/css/style.css
+++ b/css/style.css
@@ -179,11 +179,11 @@ textarea {
   width: 100%;
   top: 0;
   left: 0;
-  transform: translateX(100%);
-  transition: transform 1s ease-in-out;
+  opacity: 0;
+  transition: opacity 1.2s linear, transform 1s ease-in-out;
 }
 .slider__slide-box--active {
-  transform: translateX(0);
+  opacity: 1;
 }
 .slider__text-box {
   display: flex;
@@ -541,6 +541,9 @@ textarea {
   .header__nav-item:hover {
     color: #939dbb;
   }
+  .header__nav-item--p {
+    padding: 1em 0.2em 1em 2em;
+  }
   .header__second-nav-box {
     display: flex;
     justify-content: center;
@@ -591,14 +594,6 @@ textarea {
   }
   .header__drop-down-nav-link:hover {
     color: #939dbb;
-  }
-  .header__drop-down-close_arrow {
-    width: 0.5em;
-    justify-self: center;
-    margin: 0 1rem;
-    font-size: 6rem;
-    background: none;
-    outline: none;
   }
   .secondary-desktop-nav:hover {
     display: flex;
